# boomaga

./: .gitignore  CMakeLists.txt
cups/: CMakeLists.txt
gui/: CMakeLists.txt  main.cpp
gui/images/mac/: boomaga.icns  svgToPng.sh
gui/pdfmerger/: CMakeLists.txt
mac/: BuildAppleBundle.cmake  BuildBundle.sh.in  Info.plist.in
